# xlsx_writer

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: QUICK_REFERENCE.md  README.md  configuration_guide.md
docs/examples/: basic.json  complete.json  conditional.json  dimensions.json  merge.json  sales_report.json
src/: cell.rs  error.rs  lib.rs  prelude.rs  readsheet.rs  region_factory.rs  region_styles.rs  sheet_region.rs  workbook.rs  worksheet.rs
src/dimension_factory/: engine.rs  error.rs  mod.rs  rule.rs
src/merge_factory/: condition.rs  engine.rs  error.rs  mod.rs
src/style_factory/: condition.rs  engine.rs  error.rs  mod.rs  rules.rs
src/style_library/: definition.rs  mod.rs
src/xls/: error.rs  mod.rs  record_reader.rs  record_type.rs  sheet.rs  xls_workbook.rs
src/xls/records/: biff_record.rs  bof_record.rs  eof_record.rs  mod.rs  parseable.rs  utils.rs
src/xls_reader/: mod.rs  reader.rs
src/xls_records/: bof_record.rs  eof_record.rs  mod.rs  parseable.rs  record_type.rs  types.rs
src/xls_records/workbook/: book_bool_record.rs  boundsheet_record.rs  codepage_record.rs  date_mode_record.rs  dsf_record.rs  fn_group_count_record.rs  hide_obj_record.rs  interface_hdr_record.rs  mod.rs  number_format_record.rs  object_protect_record.rs  password_record.rs  precision_record.rs  protect_record.rs  sst_record.rs  xf_record.rs  (+3 more)
test_assets/: complex_config.json  dept_merge.json  sales_styles.json
tests/: export_tests.rs  factory_test.rs  integration_tests.rs  library_test.rs  merge_factory_test.rs  style_factory_test.rs  style_library_test.rs
(+101 files in other folders)
